--- a/scss/components/_moment.history.scss
+++ b/scss/components/_moment.history.scss
@@ -1,7 +1,7 @@
 .moment.history {
   height: 6rs;
   display: block;
-  flex: 0 0 60vw;
+  flex: 0 0 160px;
   margin-left: 4rs;
   border-radius: var(--border-radius);
   position: relative;
